--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ html{
 .main-nav {
   background: black;
 
+
 }
 
 .main-nav ul {
@@ -54,7 +55,8 @@ html{
   display: grid;
   grid-template-columns: repeat(4,1fr);
   list-style: none;
-  justify-items: center;
+  text-align: center;
+
 
 
 }
@@ -81,6 +83,7 @@ grid-gap: 20px;
   text-decoration: none;
   color: white;
 
+
 }
 
 
@@ -95,7 +98,7 @@ grid-gap: 20px;
   text-align: center;
   padding: 1.5rem 2rem;
   border: 2px black solid;
-  border-radius: 1px;
+  border-radius: 1%;
 
 
 }
@@ -122,7 +125,7 @@ footer {
 
   display: grid;
 
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
   background: black;
   color: white;
 
@@ -141,20 +144,37 @@ footer > div {
 
 }
 
+.bars {
+  margin: 0 auto;
+  display:none;
+}
+
 /* //////////// MEDIA QUERIES ///////////////// */
 
-@media(max-width: 700px) {
+@media(max-width: 500px) {
 
   .wrapper {
     width: 100%;
   }
 
+  .main-nav {
+    text-align: center;
+    background: rgb(250,250,248);
+  }
+
   .main-nav ul{
     grid-template-columns: 1fr;
-    justify-items: none;
     font-size: 2em;
+    text-align: justify;
+
 
   }
+
+  .main-nav a{
+    color: black;
+  }
+
+
   .showcase {
 
   }
@@ -164,22 +184,17 @@ footer > div {
   }
 
   .boxes {
-    grid-template-columns: 1fr;
+
      /* grid-template-columns: repeat(auto-fit, minmax(200px,1fr)); */
   }
 
-  img {
-
+  #bars {
+    display: block;
   }
 
   footer {
 
-
-
     grid-template-columns: 1fr;
-
-
-
 
 
   }
@@ -190,6 +205,14 @@ footer > div {
     margin: 0;
 
 
+  }
+
+  .bars {
+    display: block;
+  }
+
+  .responsive > li {
+    display: none;
   }
 
 
